// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-lingui-transform-react validation Date/Number format must be string, variable or object with custom format 1`] = `
"undefined: Format can be either string for buil-in formats, variable or object for custom defined formats.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mTrans[39m[33m>[39m[33m<[39m[33mNumberFormat[39m value[33m=[39m{value} format[33m=[39m{[35m42[39m} [33m/[39m[33m>[39m[33m<[39m[33m/[39m[33mTrans[39m[33m>[39m[0m
[0m [90m   | [39m           [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Date/Number value of date must be a variable 1`] = `
"undefined: Value argument is missing.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mTrans[39m[33m>[39m[33m<[39m[33mDateFormat[39m [33m/[39m[33m>[39m[33m<[39m[33m/[39m[33mTrans[39m[33m>[39m[0m
[0m [90m   | [39m           [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Date/Number value of number must be a variable 1`] = `
"undefined: Value argument is missing.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mTrans[39m[33m>[39m[33m<[39m[33mNumberFormat[39m [33m/[39m[33m>[39m[33m<[39m[33m/[39m[33mTrans[39m[33m>[39m[0m
[0m [90m   | [39m           [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal children are not allowed 1`] = `
"undefined: Children of Plural aren't allowed.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mPlural[39m[33m>[39m[33mNot[39m allowed[33m<[39m[33m/[39m[33mPlural[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal children are not allowed 2`] = `
"undefined: Children of Select aren't allowed.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelect[39m[33m>[39m[33mNot[39m allowed[33m<[39m[33m/[39m[33mSelect[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal children are not allowed 3`] = `
"undefined: Children of SelectOrdinal aren't allowed.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelectOrdinal[39m[33m>[39m[33mNot[39m allowed[33m<[39m[33m/[39m[33mSelectOrdinal[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal offset must be number or string, not variable 1`] = `
"undefined: Offset argument cannot be a variable.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mPlural[39m value[33m=[39m{value} offset[33m=[39m{offset} one[33m=[39m[32m\\"Book\\"[39m other[33m=[39m[32m\\"Books\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural forms are missing 1`] = `
"undefined: Missing plural choices. At least fallback argument 'other' is required.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mPlural[39m value[33m=[39m{value} [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural forms are missing 2`] = `
"undefined: Missing select choices. At least fallback argument 'other' is required.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelect[39m value[33m=[39m{value} [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural forms are missing 3`] = `
"undefined: Missing selectordinal choices. At least fallback argument 'other' is required.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelectOrdinal[39m value[33m=[39m{value} [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural forms missing fallback 1`] = `
"undefined: Missing fallback argument 'other'.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mPlural[39m value[33m=[39m{value} one[33m=[39m[32m\\"Book\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural forms missing fallback 2`] = `
"undefined: Missing fallback argument 'other'.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelect[39m value[33m=[39m{value} one[33m=[39m[32m\\"Book\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural forms missing fallback 3`] = `
"undefined: Missing fallback argument 'other'.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelectOrdinal[39m value[33m=[39m{value} one[33m=[39m[32m\\"Book\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural rules must be valid 1`] = `
"undefined: Invalid plural rule 'three'. Must be zero, one, two, few, many, other or exact number depending on your source language ('one' and 'other' for English).
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mPlural[39m value[33m=[39m{value} three[33m=[39m[32m\\"Invalid\\"[39m one[33m=[39m[32m\\"Book\\"[39m other[33m=[39m[32m\\"Books\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal plural rules must be valid 2`] = `
"undefined: Invalid plural rule 'three'. Must be zero, one, two, few, many, other or exact number depending on your source language ('one' and 'other' for English).
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mSelectOrdinal[39m value[33m=[39m{value} three[33m=[39m[32m\\"Invalid\\"[39m one[33m=[39m[32m\\"st\\"[39m other[33m=[39m[32m\\"rd\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;

exports[`babel-plugin-lingui-transform-react validation Plural/Select/SelectOrdinal value is missing 1`] = `
"undefined: Value argument is missing.
[0m [90m 2 | [39m      [33mTrans[39m[33m,[39m [33mPlural[39m[33m,[39m [33mSelect[39m[33m,[39m [33mSelectOrdinal[39m[33m,[39m [33mDateFormat[39m[33m,[39m [33mNumberFormat[39m [0m
[0m [90m 3 | [39m    } from [32m'@lingui/react'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m    [33m<[39m[33mPlural[39m one[33m=[39m[32m\\"Book\\"[39m other[33m=[39m[32m\\"Books\\"[39m [33m/[39m[33m>[39m[0m
[0m [90m   | [39m    [31m[1m^[22m[39m[0m"
`;
